@@ -650,7 +650,7 @@
                     <attribute name="Svn-Revision" value="${svnString}" />
                 </section>
             </manifest>
-            <fileset file="${basedir}/conf/pig-default.properties" />
+            <fileset file="${basedir}/src/pig-default.properties" />
             <fileset file="${basedir}/src/main/jruby/pigudf.rb" />
             <exclude name="hadoop-site.xml" />
         </jar>
@@ -686,7 +686,7 @@
                 <include name="jsp-api*.jar" />
                 <include name="zookeeper*.jar" />
             </zipgroupfileset>
-            <fileset file="${basedir}/conf/pig-default.properties" />
+            <fileset file="${basedir}/src/pig-default.properties" />
             <fileset file="${basedir}/src/main/jruby/pigudf.rb" />
             <exclude name="hadoop-site.xml" />
         </jar>
@@ -745,7 +745,7 @@
                     <attribute name="Svn-Revision" value="${svnString}" />
                 </section>
             </manifest>
-            <fileset file="${basedir}/conf/pig-default.properties" />
+            <fileset file="${basedir}/src/pig-default.properties" />
             <fileset file="${basedir}/src/main/jruby/pigudf.rb" />
             <exclude name="hadoop-site.xml" />
         </jar>
@@ -770,7 +770,7 @@
                 <include name="guava-${guava.version}.jar" />
                 <include name="automaton-${automaton.version}.jar" />
             </zipgroupfileset>
-            <fileset file="${basedir}/conf/pig-default.properties" />
+            <fileset file="${basedir}/src/pig-default.properties" />
             <fileset file="${basedir}/src/main/jruby/pigudf.rb" />
             <exclude name="hadoop-site.xml" />
         </jar>
