@@ -385,6 +385,8 @@ PIG-2228: support partial aggregation in map task (thejas)
 
 BUG FIXES
 
+PIG-2669: Pig release should include pig-default.properties after rebuild (daijy)
+
 PIG-2739: PyList should map to Bag automatically in Jython (daijy)
 
 PIG-2730: TFileStorage getStatistics incorrectly throws an exception instead of returning null (traviscrawford via daijy)
